--- a/sundial/stylesheet.css
+++ b/sundial/stylesheet.css
@@ -1,9 +1,142 @@
-body{
-	background-color: #FFF4C9;
+*{
+		margin: 0px;
+		padding: 0px;
+}
 
+body{
+	background-color: #FFF;
+	min-height: 100%;
+	font-family: Arial, Helvetica, sans-serif;
+
+
+}
+
+#title{
+	position: relative;
+	top: 0px;
+	color: #FFF;
+	width: 100%;
+	height: 80vh;
+	text-shadow:
+	-0.5px -0.5px 0 #000,
+	 0.5px -0.5px 0 #000,
+	 -0.5px 0.5px 0 #000,
+		0.5px 0.5px 0 #000;
+
+}
+
+#banner{
+	position: relative;
+	background-image: url("res/sundial.png");
+	background-position: center;
+	width: 100%;
+	height: 80vh;
+	background-attachment: fixed;
+	-webkit-filter: blur(1px);
+	-moz-filter: blur(1px);
+	-o-filter: blur(1px);
+	-ms-filter: blur(1px);
+	filter: blur(1px);
+
+}
+
+#gradient{
+	z-index: 2;
+	position: relative;
+	top: -100%;
+	width: 100%;
+	height: 100%;
+	background: -webkit-linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7));
+/*	background: -o-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+	background: -moz-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+	background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));*/
+
+}
+
+
+#title h1{
+	position: relative;
+	top: -150%;
+	z-index: 3;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 100%;
+	font-size: 50px;
+	font-weight: 500;
+
+}
+
+#title h2{
+	z-index: 3;
+	position: relative;
+	background-color: rgba(255, 255, 255, 0.2);
+	width: 100%;
+	top: -150%;
+	font-weight: 500;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 100%;
+	padding: 10px 0 10px 0;
+
+}
+
+#content{
+	position: relative;
+	top: 25px;
+	margin-left: 5%;
+}
+
+#content h3{
+	color: rgb(21, 126, 60);
+	font-weight: 500;
+	font-size: 22px;
+	margin-bottom: 10px;
+}
+
+input{
+	margin-bottom: 10px;
+}
+
+input[type="text"]::selection {
+    background: #0087E3; /* WebKit/Blink Browsers */
+    color:#fff;
+}
+
+input[type="text"]::-moz-selection {
+    background: #0087E3; /* Gecko Browsers */
+    color:#fff;
+}
+
+input[type="text"]{
+	border-radius: 4px;
+
+}
+
+input[type="button"]{
+	border-style: solid;
+	border-width: 1px;
+	border-color: black;
+	width: 150px;
+	height: 30px;
+
+}
+
+#location_select{
+	margin-left: 5%;
+	margin-bottom: 15px;
+}
+
+#location_select input[type="text"]{
+	width: 50px;
+	height: 20px;
+}
+
+#style_select{
+	margin-left: 5%;
+	margin-bottom: 15px;
 }
 
 #sundial{
 	position: relative;
-/*	width: 80%; */	
+/*	width: 80%; */
 }
