--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,13 +52,13 @@ body{
   position: relative;
   height: 100%;
   width: 100%;
-
+/*
 	-webkit-filter: blur(1px);
 	-moz-filter: blur(1px);
 	-o-filter: blur(1px);
 	-ms-filter: blur(1px);
 	filter: blur(1px);
-
+*/
 
 }
 
