--- a/sundial/stylesheet.css
+++ b/sundial/stylesheet.css
@@ -32,12 +32,12 @@ body{
 	width: 100%;
 	height: 80vh;
 	background-attachment: fixed;
-	-webkit-filter: blur(1px);
+/*	-webkit-filter: blur(1px);
 	-moz-filter: blur(1px);
 	-o-filter: blur(1px);
 	-ms-filter: blur(1px);
 	filter: blur(1px);
-
+*/
 }
 
 #gradient{
