--- a/basic_html/basic_style.css
+++ b/basic_html/basic_style.css
@@ -92,6 +92,7 @@ body{
 	top: 0px;
 	left: 14%;
 	width: 72%;
+  padding-top: 30px;
 	/*border-style: solid;
 	border-color: #9d9d9d;
 	border-width: 0 1px 0 1px;
