--- a/basic_html/basic_style.css
+++ b/basic_html/basic_style.css
@@ -44,6 +44,7 @@ body{
 #banner{
 	position: relative;
 	background-position: center;
+  background-size: cover;
 	width: 100%;
 	height: 100%;
 	background-attachment: fixed;
