--- a/basic_html/basic_style.css
+++ b/basic_html/basic_style.css
@@ -94,6 +94,7 @@ body{
 	left: 14%;
 	width: 72%;
   padding-top: 30px;
+  min-height: 100%;
 	/*border-style: solid;
 	border-color: #9d9d9d;
 	border-width: 0 1px 0 1px;
@@ -147,14 +148,21 @@ body{
 	margin-left: 0px;
 }
 
+.MathJax {
+	font-size: 20px;
+}
 
-#content p, li, label{
+
+
+#content p, li, label, a{
   /*text-indent: 50px;*/
   text-align: left;
   margin-bottom: 10px;
   font-size: 20px;
   font-weight: normal;
+  color: black;
 }
+
 
 #content ol{
   padding-left: 0 !important;
@@ -245,5 +253,6 @@ label{
 	#title h2{
 		top: -130vh;
 	}
+
 
 }
