--- a/mandelbrot/stylesheet.css
+++ b/mandelbrot/stylesheet.css
@@ -7,13 +7,14 @@ body{
   background-color: #000;
   color: #fff;
   font-family: Arial, Helvetica, sans-serif	;
+
 }
 
 #menu{
   position: absolute;
   top: 0px;
   left: -350px;
-/*  left: 0px;*/
+  /*left: 0px;*/
   width: 350px;
   height: 100%;
   z-index: 2;
@@ -25,21 +26,85 @@ body{
 
   transition: all 500ms linear;
   background: #111111;
-  /*overflow-y: scroll;*/
+/*  overflow-y: scroll;*/
 }
 
 
 .horizTranslateMenu {
-  left: 0px !important;
+  transform: translate(349px, 0px);
 }
 
 #toogle_menu_button{
   position: absolute;
-  left: 100%;
+  left: -1px;
+  /*left: 350px;*/
+  z-index: 2;
   width: 25px;
   height: 25px;
   padding: 10px;
-  background-color: #252525;
+  background-color: #111111;
+  transition: all 500ms linear; /*/TODO browser compatibility*/
+}
+
+#tab_button_container{
+  position: relative;
+  left: 0px;
+  top: 0px;
+
+  z-index: 4;
+  height: 35px;
+  width: 100%;
+  background-color: #2e2e2e;
+
+/*  border-style: solid;
+  border-color: #fff;
+  border-width: 0px 0px 0px 0px;*/
+
+
+}
+
+.tab_button{
+  position: relative;
+  z-index: 2;
+  height: 100%;
+  width: 31.3333%;
+  margin-left: 1%;
+  float: left;
+  border: none;
+  outline: none;
+
+  background-color: #2e2e2e;
+  color: #fff;
+  font-size: 17px;
+  font-family: Arial, Helvetica, sans-serif
+}
+
+.tab_button:hover{
+  background-color: #424141;
+  transition: background-color 100ms linear; /*/TODO browser compatibility*/
+}
+
+.tab_button.active{
+  background-color: #111111;
+  transition: background-color 100ms linear; /*/TODO browser compatibility*/
+}
+
+.tab_content{
+  display: none;
+}
+
+#color_menu{
+  display: block;
+}
+
+#menu hr{
+  border-style: solid;
+  border-color: #373737;
+  border-width: 0px 0px 1px 0px;
+
+  margin-top: 10px;
+  margin-bottom: 20px;
+/*  border-top: 1px solid #8c8b8b;*/
 }
 
 #menu h4{
@@ -51,6 +116,7 @@ body{
 #menu h4, .radio_input label{
   font-weight: normal;
   font-size: 16px;
+  margin-bottom: 10px;
 }
 
 #menu canvas{
@@ -58,14 +124,28 @@ body{
 }
 
 
-#menu input, canvas{
+#menu input, canvas, label{
   margin-left: 10px;
-  margin-top: 5px;
-  margin-bottom: 18px;
+  margin-top: 0px;
+  margin-bottom: 15px;
+}
+
+
+#menu label[for="text"]{
+  text-align: left;
+/*  float: left;*/
+  display: inline-block;
+  width: 140px;
+}
+
+
+input[type = "text"]{
+  width: 50px;
+  margin-left: 0px !important;
 }
 
 input[type = "button"]{
-  background-color: goldenrod; /* Green */
+  background-color: goldenrod;
   color: #252525;
   border: none;
   padding: 15px 32px;
