--- a/mandelbrot/stylesheet.css
+++ b/mandelbrot/stylesheet.css
@@ -10,6 +10,7 @@ body{
 
 }
 
+
 #menu{
   position: absolute;
   top: 0px;
@@ -344,6 +345,18 @@ canvas{
   image-rendering: pixelated;                 /* Awesome future-browsers       */
   -ms-interpolation-mode: nearest-neighbor;   /* IE                            */
 }
+
+
+#selector_canvas{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
 
 #info{
   z-index: 2;
