--- a/basic_html/basic_style.css
+++ b/basic_html/basic_style.css
@@ -97,9 +97,9 @@ body{
   min-height: 100%;
 	/*border-style: solid;
 	border-color: #9d9d9d;
-	border-width: 0 1px 0 1px;
+	border-width: 0 1px 0 1px;*/
 	background-color: #fff;
-	padding-bottom: 30px;*/
+	padding-bottom: 30px;
 /*  padding-top: 35px;*/
 /*  padding-bottom: 35px;*/
 }
@@ -174,6 +174,9 @@ body{
   list-style: inside disc;
 }
 
+#content img{
+  width: 100%;
+}
 
 input{
 	margin-bottom: 10px;
